@@ -4,7 +4,10 @@ GenericSetup Product Changelog
 GenericSetup 1.4.2 (unreleased)
 -------------------------------
 
-  ...
+- Update PropertyManagerHelpers to make it possible to remove elements from a
+  property by adding a remove="True" attribute to the element. This can
+  also be used to reorder elements since new elements are always added
+  at the end of the list.
 
 
 GenericSetup 1.4.1 (2008-05-27)
